# neutron-desktop

./: CMakeLists.txt  README.md  resources.qrc
src/: chatbrowser.cpp  chatbrowser.h  connectdialog.cpp  connectdialog.h  connectdialog.ui  historyform.cpp  historyform.h  historyform.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  transferdialog.cpp  transferdialog.h  transferdialog.ui
src/core/: client.cpp  client.h  file.cpp  file.h  server.cpp  server.h
